# tempo-trace-viewer

./: .gitignore  AGENT.md  LICENSE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  wdio.conf.ts
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PRD.md
docs/design/variant-a3/: README.md  index.html  trace-data.js  trace-shared.jsx  trace-variant-a3.jsx
docs/examples/traces-and-logs/: jaeger-trace-01003a80-5371-49a3-93fa-cb471d6e2c6d.json  loki-logs-nimbuscallhandler.json  loki-logs-nimbusteamsdriver.json  otel-trace-01003a80-5371-49a3-93fa-cb471d6e2c6d.json
docs/llm-sessions/: 2026-05-20-20-06-architecture-and-sprint-planning.md  2026-05-20-tempo-trace-viewer-prd.md
docs/sprint-1/tasks/: 01-init-tauri-svelte-project.md
docs/sprint-2/tasks/: 01-rust-data-model.md  02-trace-parser.md  03-ipc-trace-command.md
docs/sprint-3/tasks/: 01-trace-header.md  02-span-tree.md  03-span-detail.md  04-layout.md
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logging.rs  main.rs  state.rs
src-tauri/src/commands/: clear_session.rs  load_trace.rs  load_trace_from_path.rs  mod.rs
src-tauri/src/model/: log.rs  mod.rs  trace.rs  view.rs
src-tauri/src/parser/: mod.rs  trace_parser.rs
tests/: trace-header.spec.ts
tests/e2e/: trace-header.e2e.ts
tests/fixtures/: trace.ts
tests/helpers/: tauri-mock.ts
(+22 files in other folders)
