[package]
name = "tempo-trace-viewer"
version = "0.1.0"
edition = "2021"

[lib]
name = "tempo_trace_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.1", features = [] }

[dependencies]
tauri = { version = "=2.11.1", features = [] }
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-fs = "=2.5.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
tracing-appender = "=0.2.5"
thiserror = "=2.0.18"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
lto = true
strip = true
